improve border color, fix text overflow issue

--- a/src/components/Editor/Default/Preview/Rendrer.module.scss
+++ b/src/components/Editor/Default/Preview/Rendrer.module.scss
@@ -3,4 +3,5 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  word-break: break-word;
 }
