--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -57,7 +57,7 @@ $color-scheme: (
                 post-review-border-color: transparent,
                 left-sidebar-bg: #f5f8fb,
                 layout-border-color: #e9eaeb,
-                input-border-color: #e0e6ef,
+                input-border-color: #d5d5d5,
                 input-bg: #eceff4,
                 input-color: #1e345e,
                 button-color: #ffffff,
@@ -68,6 +68,7 @@ $color-scheme: (
                 appearance-mode-body-color: #64707d,
                 scrollbar-bg-color: #eeeeee,
                 fields-group-bg-color: #161b22,
+                setting-group-border-color: #d5d5d5,
                 setting-group-title-color: #1e345e,
                 setting-group-body-bg-color: #eceff4,
                 setting-group-button-border-bottom: #e9eaeb,
